syntax = "proto3";

package skeleton.basic.iam.v1;

option go_package = "pb";

import "google/protobuf/wrappers.proto";

service IamService {
    rpc CreateUser(CreateUserRequest) returns(CreateUserResponse){};
}

message CreateUserRequest {
    // 用户名
    google.protobuf.StringValue username = 1;
    // 密码
    google.protobuf.StringValue password = 2;
    // 邮箱
    google.protobuf.StringValue email = 3;
}

message CreateUserResponse {
    // 用户名
    google.protobuf.StringValue username = 1;
    // 用户编号
    google.protobuf.StringValue user_id = 2;
}

